<resources>
    <string name="app_name">iMusic</string>
    <string name="playlists_btn">Playlists</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorites_btn">Favorites</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="song_time">00:00</string>
    <string name="loadNext_song">Load next song</string>
    <string name="load_previous_song">Load previous song</string>
    <string name="play_pause_song">Play Pause song</string>
    <string name="add_song_to_favorite_folder">Add song to favorite folder</string>
    <string name="back_button">Back Button</string>
    <string name="sound_equalizer">Sound equalizer</string>
    <string name="share_song">Share song</string>
    <string name="repeat_song">Repeat song</string>
    <string name="timer">Timer</string>
    <string name="back_button_playlists">Back Button Playlists</string>
    <string name="playlists_activity_title">Playlists</string>
    <string name="back_btn_favorites">Back Btn Favorites</string>
    <string name="favorites_activity_title">Favorites</string>
    <string name="close_drawer">Open Drawer</string>
    <string name="open_drawer">Close Drawer</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="hello_musician_header">Hello Musician</string>
    <string name="rv_songs_name">Songs Name</string>
    <string name="rv_album_name">Album</string>
    <string name="rv_song_duration">00:00</string>
    <string name="search_view">Search View</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nowplaying_song_name">Song name</string>
    <string name="nowplaynextbtn">nowPlaynextBtn</string>
    <string name="playlist_name">Playlist name</string>
    <string name="setting_activity_title">Setting</string>
    <string name="about_activity_title">About</string>
    <string name="feedback_activity_title">Feedback</string>
    <string name="topic_feedback">Topic (eg. suggetions, error, etc)</string>
    <string name="email_feedback">Email Address (Optional)</string>
    <string name="sent_btn">SENT</string>
    <string name="add_btn">add</string>
    <string name="remove_btn_pa">Remove</string>
    <string name="welcome_to_imusic">Welcome to iMusic - Your Ultimate Music Experience!</string>
    <string name="listen_and_enjoy">Listen and Enjoy the Rhythm of Life</string>
    <string name="designed_dev">Designed and Developed by Rishabh Jain</string>
</resources>