<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:id="@+id/linearLayoutItemsRV"
    android:background="@color/black"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="8dp"
    android:paddingStart="1dp"
    tools:ignore="RtlSymmetry">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/songImage"
        android:src="@mipmap/music_icon"
        app:shapeAppearanceOverlay="@style/curved_shape"/>

    <LinearLayout
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/songName"
            android:text="@string/rv_songs_name"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:singleLine="true"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/moviewName"
            android:text="@string/rv_album_name"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:singleLine="true"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/songDuration"
        android:text="@string/rv_song_duration"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:gravity="center"/>




</LinearLayout>