<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlaylistsDetail"
    android:background="@color/black">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/dark_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn_playlistsD"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button_playlists"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/playlistNamePD"
            android:layout_marginEnd="60dp"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/playlists_activity_title"
            android:textColor="@color/white"
            android:textSize="27sp" />


    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlistDetailRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:scrollbars="vertical"
        tools:listitem=""/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:id="@+id/playlistsDetailShuffleBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="90dp"
        android:layout_marginEnd="50dp"
        app:icon="@drawable/shuffle_icon"
        app:iconTint="@color/white"
        app:iconSize="40dp"
        android:backgroundTint="@color/dark_red"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/songAddBtnPA"
            android:drawableTop="@drawable/add_icon"
            android:text="@string/add_btn"
            android:textColor="@color/dark_yellow"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/songRemoveBtnPA"
            android:drawableTop="@drawable/remove_icon"
            android:text="@string/remove_btn_pa"
            android:textColor="@color/dark_yellow"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>