<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context="com.rishabhjain.imusic.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/playlistbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/playlists_btn"
                    android:drawableTop="@drawable/playlists_icon"
                    android:text="@string/playlists_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/shufflebtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/shuffle_btn"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:text="@string/shuffle_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/favoritesbtn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/favorites_btn"
                    android:drawableTop="@drawable/favorite_icon"
                    android:text="@string/favorites_btn"
                    android:textColor="@color/white"
                    android:textAllCaps="false"/>



            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycycler_view"
                tools:listitem="@layout/recycle_music_view"/>


        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowplayingfrag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:name="com.rishabhjain.imusic.NowPlayingFragment"
            tools:layout="@layout/fragment_now_playing"/>





    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/navView"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemIconTint="@color/dark_red"
        app:itemTextColor="@color/white"
        android:background="@color/black"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>
